[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pcnn"
version = "0.1"
authors = [
  { name="lidezhen", email="lidezhenw@163.com" },
]
description = "A toolbox of Pulse Coupled Neural Network (PCNN) for image processing"
readme = "README.md"
requires-python = ">=3"
dependencies = [
  "numpy",
  "scipy",
  "opencv-python"
]
license = {file = "LICENSE"}
keywords = ["Image Processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lidezhenw/pcnn"
Issues = "https://github.com/lidezhenw/pcnn/issues"